objects/FieloDRE__RuleApplied__c.object
<CustomObject>
    <fields>
        <fullName>FieloDRE__ActionDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__ExpirationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloDRE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipName>Fielo_RuleApplied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloDRE__PointsDecimal__c</fullName>
        <label>Points Decimal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloDRE__Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloDRE__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>FieloEE__Promotion__c</referenceTo>
        <relationshipName>Fielo_RuleApplied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloDRE__RuleDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloDRE__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>FieloEE__Rule__c</referenceTo>
        <relationshipName>Fielo_RuleApplied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloDRE__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Rules Applied</relationshipLabel>
        <relationshipName>Rules_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rule Applied</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Rule Applied Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Applied</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>